Use google sheets API to read sheet

--- a/.gitignore
+++ b/.gitignore
@@ -346,3 +346,7 @@ MigrationBackup/
 
 # dotnet
 src/Kicker.Stats/out/
+
+# credentials
+src/Kicker.Stats/Configuration/credentials.json
+src/Kicker.Stats/Configuration/service-account-key.json
