--- a/src/Kicker.Stats/Properties/launchSettings.json
+++ b/src/Kicker.Stats/Properties/launchSettings.json
@@ -11,7 +11,7 @@
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "index.html",
+      "launchUrl": "index-vue.html",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
